2008-03-18  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-17  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra and kdelibs.

2008-03-12  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-atk.nsi: Install message catalogs for ar, es, fr and ru.
	* src/inst-glib.nsi: Likewise.
	* src/inst-gtk+.nsi: Likewise.  Also install gtk20-properties.mo.
	* src/uninst-atk.nsi: Uninstall them.
	* src/uninst-glib.nsi: Likewise.
	* src/uninst-gtk+.nsi: Likewise.

2008-03-11  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: Add gpg2 and its buddies to the light installer.

2008-03-11  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-10  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpa.
	* src/inst-gpa.nsi: Install other languages AR, ES, FR and RU.
	* src/uninst-gpa.nsi: Deinstall those languages.

	* AUTHORS: Add translators.
	* src/inst-sections.nsi (.onInit): Insert macro MUI_LANGDLL_DISPLAY.
	[DEBUG]: Define MUI_LANGDLL_ALWAYSSHOW.
	(un.onInit): New function.
	* src/installer.nsi: Include ../po/catalogs.nsi with PO_HEADER
	defined to include MUI language files.  Insert macro
	MUI_RESERVEFILE_LANGDLL.
	(MUI_LANGDLL_REGISTRY_ROOT, MUI_LANGDLL_REGISTRY_KEY)
	(MUI_LANGDLL_REGISTRY_VALUENAME): New symbols.
	(MUI_LANGDLL_ALLLANGUAGES) [DEBUG]: New symbol.

2008-03-10  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-07  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-05  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kdelibs and kleopatra.

2008-02-28  Marcus Brinkmann  <marcus@g10code.de>

	* src/kleowrap.c: Use CreateProcess instead of spawn for ksycoca
	to suppress console window.

2008-02-27  Marcus Brinkmann  <marcus@g10code.de>

	* src/kleowrap.c: Include errno.h.
	(run_kbuildsycoca): New function by Frank Osterfeld.